# IRHomeLab

./: .gitmodules  CMakeLists.txt  roadmap.md  toolchain-arm64.cmake
IRDriverMock/: Makefile  README.md  irdriver_mock.c  load_irdriver_mock  unload_irdriver_mock
RemoteControllerMock/: CMakeLists.txt  README.md  main.cpp
source/debug_src/: RemoteControllerMockFrame.cpp
source/include/: WidgetsID.hpp  irdriver.hpp  irdriver_api.h
source/include/Com/Signals/: SignalHandler.hpp
source/include/Config/: AppConfig.hpp
source/include/Core/: ApplicationCore.hpp
source/include/Core/Controllers/: DummyController.hpp  IController.hpp  SpotifyController.hpp
source/include/Core/Controllers/Spotify/: SpotifyController.hpp
source/include/Core/States/: IState.hpp  SpotifyState.hpp
source/include/Debug/: RemoteControllerMockFrame.hpp
source/include/GUI/: App.hpp  Connector.hpp
source/include/GUI/Components/: ImagePanel.hpp
source/include/GUI/Events/: PageEvent.hpp  StateEvent.hpp
source/include/GUI/Frames/: MainFrame.hpp
source/include/GUI/Pages/: Page.hpp  PageHandler.hpp
source/include/GUI/Views/: DummyView.hpp  IView.hpp  SpotifyView.hpp  ViewsID.hpp
source/include/GUI/Views/Spotify/: SpotifyDeviceSelectionPanel.hpp  SpotifyPlayerPanel.hpp  SpotifyView.hpp
source/include/GUI/icons/: pause.hpp  play.hpp  spotify.hpp
source/src/Com/Signals/: SignalHandler.cpp
source/src/Config/: AppConfig.cpp
source/src/Core/: ApplicationCore.cpp
source/src/Core/Controllers/: IController.cpp  SpotifyController.cpp
source/src/Core/Controllers/Spotify/: SpotifyController.cpp
source/src/Core/States/: SpotifyState.cpp
source/src/GUI/: App.cpp  Connector.cpp
source/src/GUI/Components/: ImagePanel.cpp
source/src/GUI/Events/: PageEvent.cpp  StateEvent.cpp
source/src/GUI/Frames/: MainFrame.cpp
source/src/GUI/Pages/: Page.cpp  PageHandler.cpp
source/src/GUI/Views/: SpotifyView.cpp  ViewsID.cpp
source/src/GUI/Views/Spotify/: SpotifyDeviceSelectionPanel.cpp  SpotifyPlayerPanel.cpp  SpotifyView.cpp
